# 2048-deepsearch

./: .gitignore  2048nn.py  Cargo.toml  board.py  td2048.py
go/src/board/: board.go
go/src/td2048/: td2048.go
python/: 2048nn.py  board.py  td2048.py
rust/: .gitignore  Cargo.toml
rust/src/: board.rs  expmax.rs  movavg.rs  tdlearn.rs
src/: board.rs  expmax.rs  main.rs  tdlearn.rs
