[package]
name = "p2048"
version = "0.1.0"
authors = ["Jonas Sicking <jonas@sicking.cc>"]

[dependencies]
getch = "0.1.1"
byteorder = "1.0.0"
getopts = "0.2"
futures = "0.1.14"
futures-cpupool = "0.1.5"

[profile.release]
codegen-units = 1

[features]
default = []
best-symmetry = []

[[bin]]
name = "expmax"
path = "src/expmax.rs"

[[bin]]
name = "tdlearn"
path = "src/tdlearn.rs"
